--- a/app/index.html
+++ b/app/index.html
@@ -82,11 +82,9 @@
 				<div class="shipping-tex__order">Lifestyme Support</div>
 			</div>
 		</div>
-
 	</section>
 
-	<section class="collection-big wrap">
-		
+	<section class="collection-big wrap">		
 		<div class="collection-title">
 			<div class="hr">
 				<div class="line"></div>
@@ -243,7 +241,7 @@
  		</div>
 	</section>
 
-	<section class="customer wrapper">
+	<section class="customer wrap">
 		<div class="collection-title">
 			<div class="hr">
 				<div class="line"></div>
@@ -259,7 +257,9 @@
 		<div class="customer-main wrap">
 			
 			<div class="customer-item left">
-				<img src="img/customer-01.png" alt="">
+				<div class="img-block">
+					<img src="img/customer-01.png" class="customer__img" alt="">
+				</div>
 				<div class="customer-text">
 					<div class="customer-description">
 						<p>Sed ut perspiciatis<br>
@@ -281,7 +281,9 @@
 					<span class="customer-name">Shaheer Sheikh</span>
 					<span class="customer-job">DESIGNER</span>
 				</div>
-				<img src="img/customer-02.png" alt="">
+				<div class="img-block">
+					<img src="img/customer-02.png" class="customer__img" alt="">
+				</div>
 			</div>
 
 		</div>
