--- a/app/#source/html/index.html
+++ b/app/#source/html/index.html
@@ -291,7 +291,7 @@
 </main>
 
 <footer>
-	<section class="footer-nav wrapper">
+	<section class="footer-nav">
 		<div class="footer-nav-block wrap">
 			<div class="footer-block-navigation">
 				<!-- 1 -->
@@ -357,21 +357,23 @@
 
 				<div class="footer-subscribe">
 					<div class="footer-nav-title">SUBSCRIBE   in  OUR  NEWS  LETTER</div>
-					<div class="footer-subscribe-field">
-						<input type="text" placeholder="Enter Your Email Address" class="footer-subscribe-tex">
-						<input type="submit" value="SUBSCRIBE" class="footer-subscribe-btn">
-					</div>	
+ 					<form action="#" class="footer-subscribe-field">
+						<input autocomplete="off" type="text" name="form[]" data-value="Enter Your Email Address" class="footer-subscribe-tex input req email">
+						<button type="submit" class="footer-subscribe-btn">SUBSCRIBE</button>
+					</form>
+
+
 				</div>
 
 			</div>
 		</div>
 	</section>
 	
-	<section class="copyright wrapper">
+	<section class="copyright">
 		<div class="copyright-block wrap">
-			<a href="#!"><div class="copyright-hint"></div></a>
+			<!-- <a href="#!">adfadfs<div class="copyright-hint"></div></a> -->
 			<div class="copyright-text">
-				<p>© 2015  Shopia  Fashion Store Shopify. All Rights Reserved. Ecommerce oftware by Shopify. Designed by MoccaLabs.com</p>
+				<p>© 2020  Shopia  Fashion Store Shopify. All Rights Reserved. Ecommerce oftware by Shopify. Designed by MoccaLabs.com</p>
 			</div>
 			<div class="payments">
 				<img src="img/pay-01.png" alt="">
@@ -381,6 +383,7 @@
 			</div>
 		</div>
 	</section>
+	
 	<div class="footer-bottom wrapper"></div>			
 </footer>
 </div>	
