--- a/app/#source/html/index.html
+++ b/app/#source/html/index.html
@@ -56,7 +56,7 @@
 
 <main class='main'>
 	<!-- include('slider.html') -->
-	<!-- @@include('slider.html') -->
+	@@include('slider.html')
 	<!-- ============================== -->
 
 	<section class="shipping wrap">
@@ -84,7 +84,7 @@
 		</div>
 	</section>
 
-	<section class="collection-big wrap">		
+	<section class="collection-big wrap">
 		<div class="collection-title">
 			<div class="hr">
 				<div class="line"></div>
