--- a/app/#source/html/slider.html
+++ b/app/#source/html/slider.html
@@ -2,7 +2,8 @@
 		<div class="swiper-wrapper">
 			<!-- 1 -->
 			<div class="swiper-slide">
-				<div class="slider-item itemb-lock">
+				<div class="slider-item item-block ibg">
+					<img src="../img/slider_01.jpg" class="img_bg" alt="">
 					<div class="banner-content">
 						<div class="slider-baner">
 							<div class="baner-mid">MID-SEASON</div>
@@ -23,11 +24,11 @@
 						<a href="#!" class="slider-btn-shop">SHOP NOW</a>
 					</div>
 				</div>
-			</div>	
+			</div>
 			<!-- 2 -->
 			<div class="swiper-slide">
-				<div class="slider-item itemb-lock">
-					2
+				<div class="slider-item item-block ibg">
+					<img src="../img/slider_01.jpg" class="img_bg" alt="">
 					<div class="banner-content">
 						<div class="slider-baner">
 							<div class="baner-mid">MID-SEASON</div>
@@ -51,8 +52,8 @@
 			</div>	
 			<!-- 3 -->
 			<div class="swiper-slide">
-				<div class="slider-item itemb-lock">
-					3
+				<div class="slider-item item-block ibg">
+					<img src="../img/slider_01.jpg" class="img_bg" alt="">
 					<div class="banner-content">
 						<div class="slider-baner">
 							<div class="baner-mid">MID-SEASON</div>
@@ -73,11 +74,11 @@
 						<a href="#!" class="slider-btn-shop">SHOP NOW</a>
 					</div>
 				</div>
-			</div>	
+			</div>
 			<!-- 4 -->
 			<div class="swiper-slide">
-				<div class="slider-item itemb-lock">
-					4
+				<div class="slider-item item-block ibg">
+					<img src="../img/slider_01.jpg" class="img_bg" alt="">
 					<div class="banner-content">
 						<div class="slider-baner">
 							<div class="baner-mid">MID-SEASON</div>
@@ -99,7 +100,6 @@
 					</div>
 				</div>
 			</div>	
-
 			<!--  -->
 		</div>
     	<div class="swiper-pagination"></div>
