--- a/app/#source/html/slider.html
+++ b/app/#source/html/slider.html
@@ -3,7 +3,7 @@
 			<!-- 1 -->
 			<div class="swiper-slide">
 				<div class="slider-item item-block ibg">
-					<img src="../img/slider_01.jpg" class="img_bg" alt="">
+					<img src="img/slider_01.jpg" class="img_bg" alt="">
 					<div class="banner-content">
 						<div class="slider-baner">
 							<div class="baner-mid">MID-SEASON</div>
@@ -28,7 +28,7 @@
 			<!-- 2 -->
 			<div class="swiper-slide">
 				<div class="slider-item item-block ibg">
-					<img src="../img/slider_01.jpg" class="img_bg" alt="">
+					<img src="img/slider_01.jpg" class="img_bg" alt="">
 					<div class="banner-content">
 						<div class="slider-baner">
 							<div class="baner-mid">MID-SEASON</div>
@@ -53,7 +53,7 @@
 			<!-- 3 -->
 			<div class="swiper-slide">
 				<div class="slider-item item-block ibg">
-					<img src="../img/slider_01.jpg" class="img_bg" alt="">
+					<img src="img/slider_01.jpg" class="img_bg" alt="">
 					<div class="banner-content">
 						<div class="slider-baner">
 							<div class="baner-mid">MID-SEASON</div>
@@ -78,7 +78,7 @@
 			<!-- 4 -->
 			<div class="swiper-slide">
 				<div class="slider-item item-block ibg">
-					<img src="../img/slider_01.jpg" class="img_bg" alt="">
+					<img src="img/slider_01.jpg" class="img_bg" alt="">
 					<div class="banner-content">
 						<div class="slider-baner">
 							<div class="baner-mid">MID-SEASON</div>
