--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
 			<!-- 1 -->
 			<div class="swiper-slide">
 				<div class="slider-item item-block ibg">
-					<img src="../img/slider_01.jpg" class="img_bg" alt="">
+					<img src="img/slider_01.jpg" class="img_bg" alt="">
 					<div class="banner-content">
 						<div class="slider-baner">
 							<div class="baner-mid">MID-SEASON</div>
@@ -86,7 +86,7 @@
 			<!-- 2 -->
 			<div class="swiper-slide">
 				<div class="slider-item item-block ibg">
-					<img src="../img/slider_01.jpg" class="img_bg" alt="">
+					<img src="img/slider_01.jpg" class="img_bg" alt="">
 					<div class="banner-content">
 						<div class="slider-baner">
 							<div class="baner-mid">MID-SEASON</div>
@@ -111,7 +111,7 @@
 			<!-- 3 -->
 			<div class="swiper-slide">
 				<div class="slider-item item-block ibg">
-					<img src="../img/slider_01.jpg" class="img_bg" alt="">
+					<img src="img/slider_01.jpg" class="img_bg" alt="">
 					<div class="banner-content">
 						<div class="slider-baner">
 							<div class="baner-mid">MID-SEASON</div>
@@ -136,7 +136,7 @@
 			<!-- 4 -->
 			<div class="swiper-slide">
 				<div class="slider-item item-block ibg">
-					<img src="../img/slider_01.jpg" class="img_bg" alt="">
+					<img src="img/slider_01.jpg" class="img_bg" alt="">
 					<div class="banner-content">
 						<div class="slider-baner">
 							<div class="baner-mid">MID-SEASON</div>
